# basic-webserver

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.roc  flake.nix  glue-gen.sh  jump-start.sh
.github/workflows/: ci.yml  ci_nix.yml  deploy-docs.yml  generate-docs.yaml  generate-docs.yml  sync-check.yml  test_latest_release.yml
ci/: all_tests.sh  check-sync-basic-cli.sh  check_all_exposed_funs_tested.roc  get_latest_release_git_files.sh  test_latest_release.sh
ci/expect_scripts/: cmd-test.exp  command.exp  dir-test.exp  dir.exp  echo.exp  env-test.exp  env.exp  error-handling.exp  file-accessed-modified-created-time.exp  file-permissions.exp  file-read-buffered.exp  file-read.exp  file-upload-curl.sh  file-upload-form.exp  file.exp  form-file-upload.exp  form-url-encoded-curl.sh  form-url-encoded.exp  hello-web.exp  http.exp  init-basic.exp  issue_104.exp  issue_154.exp  json-web-token.exp  path-test.exp  result.exp  shared-code.exp  sleep.exp  sqlite-test.exp  sqlite.exp  stdout-stderr.exp  tcp.exp  temp-dir.exp  todos.exp  url.exp  utc.exp
crates/: README.md
crates/glue_manual/: Cargo.toml
crates/glue_manual/src/: wasm32.rs  x86.rs  x86_64.rs
crates/json_web_token/: Cargo.toml
crates/json_web_token/src/: lib.rs
crates/roc_app/: Cargo.toml
crates/roc_app/src/: aarch64.rs  lib.rs  wasm32.rs  x86_64.rs
crates/roc_fn/: Cargo.toml
crates/roc_fn/src/: lib.rs
crates/roc_host/: Cargo.toml  build.rs
crates/roc_host/src/: glue_internal_jwt.rs  heap.rs  http_client.rs  http_server.rs  json_web_token.rs  lib.rs  roc.rs  roc_http.rs  roc_sql.rs  server.rs
crates/roc_host_bin/: build.rs
crates/roc_host_bin/src/: main.rs
crates/roc_std/src/: lib.rs  roc_box.rs  roc_list.rs  roc_str.rs
crates/simple_bench/: Cargo.toml
crates/simple_bench/src/: main.rs
docs/: index.html
example/: .gitignore  main.roc
examples/: README.md  cache.roc  command.roc  dir.roc  echo.roc  env.roc  error-handling.roc  file-accessed-modified-created-time.roc  file-permissions.roc  file-read-buffered.roc  file-read.roc  file-upload-form.roc  file-upload.roc  file.roc  form-data.roc  form-file-upload.roc  form-url-encoded.roc  hello-web.ll  hello-web.roc  http.roc  init-basic.roc  json-web-token.roc  log.roc  main.roc  result.roc  sleep.roc  sqlite.roc  sqlite3.roc  temp-dir.roc  todos.db  todos.db-shm  todos.db-wal  todos.html  todos.roc
platform/: .gitignore  Base64.roc  Cache.roc  Cargo.toml  Cmd.roc  Command.roc  Dir.roc  Effect.roc  Env.roc  EnvDecoding.roc  File.roc  FileMetadata.roc  Header.roc  Host.roc  Http.roc  HttpHeader.roc  HttpResponse.roc  InternalCommand.roc  InternalDateTime.roc  InternalError.roc  InternalFile.roc  InternalHttp.roc  InternalJwt.roc  InternalPath.roc  InternalSQL.roc  Jwt.roc  MultipartFormData.roc  Path.roc  PlatformTask.roc  PlatformTasks.roc  Request.roc  Resp.roc  Response.roc  SQLite3.roc  Sleep.roc  SplitList.roc  SplitSeq.roc  Sqlite.roc  Stderr.roc  Stdin.roc  (+14 more)
platform/glue/roc_app/src/: glue.rs  lib.rs
platform/src/: http_client.rs  lib.rs  metadata.rs  server.rs
platform/src/command_glue/: Cargo.toml
platform/src/command_glue/src/: aarch64.rs  arm.rs  wasm32.rs  x86_64.rs
platform/src/glue/roc_app/src/: aarch64.rs  wasm32.rs  x86.rs  x86_64.rs
platform/src/glue_manual/: Cargo.toml
platform/src/glue_manual/src/: aarch64.rs  arm.rs  wasm32.rs  x86.rs  x86_64.rs
platform/src/roc_fn/: Cargo.toml
platform/src/roc_fn/src/: lib.rs
tests/: README.md  cmd-test.roc  dir-test.roc  env-test.roc  file.roc  issue_104.roc  issue_154.roc  path-test.roc  sqlite-test.roc  stdout-stderr.roc  tcp.roc  test.db  todos.db  url.roc  utc.roc
