[package]
name = "host"
version = "0.0.1"
authors = ["The Roc Contributors"]
license = "UPL-1.0"
edition = "2018"
links = "app"

[lib]
name = "host"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
roc_std = { path = "src/glue/roc_std", features = ["std"] }
roc_app = { path = "src/glue/roc_app" }
roc_fn = { path = "src/roc_fn" }
command_glue = { path = "src/command_glue" }
libc = "0.2"
hyper = { version = "0.14", features = [
    "http1",
    "http2",
    "client",
    "server",
    "runtime",
    "backports",
    "deprecated",
] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.11.11", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
futures = "0.3"
backtrace = "0.3.68"
bytes = "1.0"

[workspace]
