[package]
name = "json_web_token"
version = "0.0.1"
authors = ["The Roc Contributors"]
license = "UPL-1.0"
edition = "2018"
description = "Provides a simple interface for working with JWTs"

[lib]
crate-type = ["rlib"]
name = "json_web_token"
path = "src/lib.rs"

[dependencies]
indoc = "2"
jwt = { version = "0.16.0", features = ["openssl"]}
hmac = "0.12.1"
sha2 = "0.10.8"
serde_json = "1.0.127"
openssl = {version = "0.10.66", features = ["vendored"]}
