[package]
name = "roc_host"
version = "0.0.1"
authors = ["The Roc Contributors"]
license = "UPL-1.0"
edition = "2018"
description = "This provides the [host](https://github.com/roc-lang/roc/wiki/Roc-concepts-explained#host) implementation for the platform."

links = "app"

[lib]
name = "roc_host"
path = "src/lib.rs"

[dependencies]
roc_std.workspace = true
# TODO restore when basic-cli changes land
# https://github.com/roc-lang/basic-cli/pull/288
#
# roc_env = { git = "https://github.com/roc-lang/basic-cli.git" }
# roc_command = { git = "https://github.com/roc-lang/basic-cli.git" }
# roc_io_error = { git = "https://github.com/roc-lang/basic-cli.git" }
# roc_stdio = { git = "https://github.com/roc-lang/basic-cli.git" }
# roc_file = { git = "https://github.com/roc-lang/basic-cli.git" }
# roc_http = { git = "https://github.com/roc-lang/basic-cli.git" }
roc_env = { path = "../../../basic-cli/crates/roc_env" }
roc_command = { path = "../../../basic-cli/crates/roc_command" }
roc_io_error = { path = "../../../basic-cli/crates/roc_io_error" }
roc_stdio = { path = "../../../basic-cli/crates/roc_stdio" }
roc_file = { path = "../../../basic-cli/crates/roc_file" }
roc_http = { path = "../../../basic-cli/crates/roc_http" }
libc = "0.2"
hyper = { version = "0.14", features = [
    "http1",
    "http2",
    "client",
    "server",
    "runtime",
    "backports",
    "deprecated",
] }
hyper-rustls = { version = "=0.24.2", default-features = false, features = [
    "http1",
    "tls12",
    "native-tokio",
] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3"
backtrace = "0.3.68"
bytes = "1.0"
sqlite = { version = "0.33.0", features = ["bundled"] }
