[package]
name = "roc_host"
version = "0.0.1"
authors = ["The Roc Contributors"]
license = "UPL-1.0"
edition = "2018"
description = "This provides the [host](https://github.com/roc-lang/roc/wiki/Roc-concepts-explained#host) implementation for the platform."

links = "app"

[lib]
name = "roc_host"
path = "src/lib.rs"

[dependencies]
roc_std.workspace = true
roc_env = { git = "https://github.com/roc-lang/basic-cli.git" }
roc_command = { git = "https://github.com/roc-lang/basic-cli.git" }
roc_io_error = { git = "https://github.com/roc-lang/basic-cli.git" }
roc_stdio = { git = "https://github.com/roc-lang/basic-cli.git" }
roc_file = { git = "https://github.com/roc-lang/basic-cli.git" }
roc_http = { git = "https://github.com/roc-lang/basic-cli.git" }
roc_sqlite = { git = "https://github.com/roc-lang/basic-cli.git" }
libc = "0.2"
hyper = { version = "0.14", features = [
    "http1",
    "http2",
    "client",
    "server",
    "runtime",
    "backports",
    "deprecated",
] }
hyper-rustls = { version = "=0.24.2", default-features = false, features = [
    "http1",
    "tls12",
    "native-tokio",
] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3"
backtrace = "0.3.68"
bytes = "1.0"
